feat(tooltip): add support for hoverable definition tooltip body (#5323)

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -40,7 +40,6 @@
   font-weight: 400;
   text-align: left;
   transform: translateX(-50%);
-  pointer-events: none;
   background-color: $inverse-02;
   @include type-style('body-short-01');
 
@@ -97,7 +96,6 @@
     display: flex;
     align-items: center;
     opacity: 0;
-    pointer-events: none;
 
     // IE media query
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -150,6 +148,7 @@
     content: none;
   }
 
+  &.#{$prefix}--tooltip--visible,
   &:hover,
   &:focus {
     &::before,
