feat(date-picker): add size variants (#5460)
* feat(date-picker): add size variants

* fix(date-picker):  update proptype definition

* fix(date-pickerr): remove default prop value

* docs(date-picker): use undefined instead of empty string

* docs(components): rename large to default size

--- a/packages/components/src/components/date-picker/_date-picker.scss
+++ b/packages/components/src/components/date-picker/_date-picker.scss
@@ -119,6 +119,15 @@
     }
   }
 
+  // Size variant styles
+  .#{$prefix}--date-picker__input--xl {
+    height: rem(48px);
+  }
+
+  .#{$prefix}--date-picker__input--sm {
+    height: rem(32px);
+  }
+
   .#{$prefix}--date-picker__icon {
     position: absolute;
     right: 1rem;
