--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -255,6 +255,7 @@ $modal-border-top: $brand-01 4px solid !default;
 /// @type Color
 /// @access public
 /// @group modal
+/// @deprecated
 $modal-footer-background-color: $ui-03 !default;
 
 // Notification
