fix(tooltip): wrap icon tooltip content (#5544)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -29,6 +29,8 @@
 @mixin tooltip--content($tooltip-type: 'icon') {
   @include box-shadow;
   width: max-content;
+  min-width: rem(24px);
+  max-width: rem(208px);
   height: auto;
   padding: if(
     $tooltip-type == 'definition',
