--- a/packages/type/scss/_reset.scss
+++ b/packages/type/scss/_reset.scss
@@ -10,18 +10,18 @@
 @import 'styles';
 
 /// Include a type reset for a given body and mono font family
-/// @param {Number} $base-font-size [$carbon--base-font-size] - The base font size for your document
 /// @param {String} $body-font-family [carbon--font-family('sans')] - The font family used on the `<body>` element
 /// @param {String} $mono-font-family [carbon--font-family('mono')] - The font family used on elements that require mono fonts, like the `<code>` element
 /// @access public
 /// @group @carbon/type
 @mixin carbon--type-reset(
-  $base-font-size: $carbon--base-font-size,
+  // TODO: remove in next major release. This has been replaced with 100%
+    $base-font-size: $carbon--base-font-size,
   $body-font-family: carbon--font-family('sans'),
   $mono-font-family: carbon--font-family('mono')
 ) {
   html {
-    font-size: $base-font-size;
+    font-size: 100%;
   }
 
   body {
