chore(components): change vibility style (#5552)
This change addresses a common known problem of `visibility:visible`
style; If an element with `visibility:hidden` has a child element with
`visibility:visible`, the child element will be visible even though in
most cases it's expected that the entire content (including the child
element) is hidden.

Refs #5545.

--- a/packages/components/src/components/ui-shell/_side-nav.scss
+++ b/packages/components/src/components/ui-shell/_side-nav.scss
@@ -52,7 +52,7 @@
   .#{$prefix}--side-nav--fixed &,
   .#{$prefix}--side-nav--expanded & {
     @if $visibility == true {
-      visibility: visible;
+      visibility: inherit;
     }
     @if $opacity == true {
       opacity: 1;
