fix(tile): add non link styling to clickable tile (#5591)
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -62,6 +62,13 @@
     }
   }
 
+  .#{$prefix}--tile--clickable {
+    @include reset;
+    @include type-style('body-short-01');
+    color: $text-01;
+    text-decoration: none;
+  }
+
   .#{$prefix}--tile--selectable {
     padding-right: $carbon--spacing-09;
   }
