fix(tile): change expandable tile to button (#5609)
* fix(tile): make tile button to copy accordion patter

* chore(tile): update tests

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -62,6 +62,11 @@
     }
   }
 
+  // Removes Firefox automatic border on buttons
+  .#{$prefix}--tile--expandable::-moz-focus-inner {
+    border: 0;
+  }
+
   .#{$prefix}--tile--clickable {
     @include reset;
     @include type-style('body-short-01');
@@ -116,6 +121,14 @@
     &:focus {
       outline: none;
     }
+  }
+
+  .#{$prefix}--tile--expandable {
+    width: 100%;
+    color: inherit;
+    font-size: inherit;
+    text-align: left;
+    border: 0;
   }
 
   .#{$prefix}--tile--expandable {
