fix(tag): define default tag style (#5677)
This change defines the default tag style (color) as specified in #5506.

Fixes #5506.

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -18,6 +18,7 @@
   .#{$prefix}--tag {
     @include button-reset($width: false);
     @include type-style('label-01');
+    @include tag-theme($ibm-color__gray-20, $ibm-color__gray-100);
 
     display: inline-flex;
     align-items: center;
