docs(icons): add docs around icon metadata (#5662)
* docs(icons): add docs around icon metadata

* Update contributing.md

expanded description of the renaming/removal processes

* Update contributing.md

expanded the description of the renaming/removal processes

* chore(format): run prettier

* Update contributing.md

typo `nem` -> `new`

* Update contributing.md

typo `nem` -> `new`

Co-authored-by: Chris Connors <35537391+chrisconnors-ibm@users.noreply.github.com>

--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -63,7 +63,7 @@
   $font-color,
   $hover-bg-color,
   $icon-color,
-  $active-color,
+  $active-color
 ) {
   background-color: $bg-color;
   border-width: $button-outline-width;
@@ -77,9 +77,8 @@
 
   &:focus {
     border-color: $focus;
-    box-shadow:
-    inset 0 0 0 $button-border-width $focus,
-    inset 0 0 0 ($button-border-width + $button-outline-width) $ui-02;
+    box-shadow: inset 0 0 0 $button-border-width $focus,
+      inset 0 0 0 ($button-border-width + $button-outline-width) $ui-02;
   }
 
   &:active {
