--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -83,7 +83,7 @@
       $interactive-03,
       $hover-tertiary,
       currentColor,
-      $active-tertiary,
+      $active-tertiary
     );
 
     &:hover {
