fix(code-snippet): allow horizontal scroll, add right padding to multi-line snippet (#5704)
* fix(code-snippet): test possible fixes

* fix(code-snippet): remove test code

--- a/packages/components/src/components/code-snippet/_code-snippet.scss
+++ b/packages/components/src/components/code-snippet/_code-snippet.scss
@@ -162,7 +162,8 @@
 
   // closed pre
   .#{$prefix}--snippet--multi .#{$prefix}--snippet-container pre {
-    overflow: hidden;
+    overflow-x: scroll;
+    padding-right: $carbon--spacing-08;
     padding-bottom: rem(24px);
   }
 
