feat(list-box): Update list box tokens (#5719)
* feat(tokens): add selected-ui-light color token

* fix(tokens): add to token list

* fix(tokens): add new selected-light-ui color token

* feat(list-box): update list-box tokens to new selected-light-ui

--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -467,6 +467,10 @@ $list-box-menu-width: rem(300px);
     background-color: transparent;
   }
 
+  .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item:active {
+    background-color: $selected-light-ui;
+  }
+
   .#{$prefix}--list-box--disabled
     .#{$prefix}--list-box__menu-item__option:hover {
     border-top-color: $ui-03;
@@ -581,6 +585,16 @@ $list-box-menu-width: rem(300px);
     color: $text-01;
     background-color: $selected-ui;
     border-bottom-color: $selected-ui;
+  }
+
+  .#{$prefix}--list-box--light .#{$prefix}--list-box__menu-item--active {
+    background-color: $selected-light-ui;
+    border-bottom-color: $selected-light-ui;
+  }
+
+  .#{$prefix}--list-box__menu-item--active:hover {
+    background-color: $hover-ui;
+    border-bottom-color: $hover-ui;
   }
 
   .#{$prefix}--list-box__menu-item--active
