fix(data-table): remove max width line from core styles (#5747)
* fix(data0table): remove max width line from core styles

* chore(data-table): add sticky haeder mixin with max-width

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -549,7 +549,7 @@
     }
   }
 
-  @include sticky-header($max-width: rem(900px));
+  @include sticky-header($max-width: 100%);
 }
 
 @include exports('data-table-v2-core') {
