feat(tag): respect type prop for filter tag (#5382)
* feat(tag): respect type prop for filter tag

* feat(tag): add support for dark theme colors

* fix(tag): import css vars helper

* fix(tag): expose tag colors in themes

* fix(tag): fix prettier issues

* fix(tag): use correct focus color for filterable tag

* fix(tag): build new component tokens structure

* fix: identify theme for component-tokens

* fix: use emit-component-tokens in react stroybook style

* fix(tag): emit component tokens on carbon--theme mixin

* fix(themes): only emit component tokens if they exist

* chore(themes): satisfy prettier issue

* fix: roll back to $carbon--theme comparison, remove $theme-identifier

* fix: simplify storybook theme mixin

* refactor: revert obsolete changes

* chore(storybook): revert obsolete explicit theme for component tokens

* fix(tag): apply component tokens to default tag

Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>

--- a/packages/react/.storybook/styles.scss
+++ b/packages/react/.storybook/styles.scss
@@ -16,6 +16,7 @@ $prefix: 'bx';
 @import '~carbon-components/scss/globals/scss/vars';
 @import '~carbon-components/scss/globals/scss/colors';
 @import '~carbon-components/scss/globals/scss/theme';
+@import '~carbon-components/scss/globals/scss/component-tokens';
 @import '~carbon-components/scss/globals/scss/mixins';
 @import '~carbon-components/scss/globals/scss/layout';
 @import '~carbon-components/scss/globals/scss/spacing';
@@ -74,18 +75,26 @@ $prefix: 'bx';
 
 @if feature-flag-enabled('enable-css-custom-properties') {
   :root {
-    @include carbon--theme($carbon--theme--white, true);
+    @include carbon--theme($carbon--theme--white, true) {
+      @include emit-component-tokens($tag-colors);
+    }
   }
 
   :root[storybook-carbon-theme='g10'] {
-    @include carbon--theme($carbon--theme--g10, true);
+    @include carbon--theme($carbon--theme--g10, true) {
+      @include emit-component-tokens($tag-colors);
+    }
   }
 
   :root[storybook-carbon-theme='g90'] {
-    @include carbon--theme($carbon--theme--g90, true);
+    @include carbon--theme($carbon--theme--g90, true) {
+      @include emit-component-tokens($tag-colors);
+    }
   }
 
   :root[storybook-carbon-theme='g100'] {
-    @include carbon--theme($carbon--theme--g100, true);
+    @include carbon--theme($carbon--theme--g100, true) {
+      @include emit-component-tokens($tag-colors);
+    }
   }
 }
