--- a/packages/components/src/components/data-table/_data-table-skeleton.scss
+++ b/packages/components/src/components/data-table/_data-table-skeleton.scss
@@ -9,29 +9,17 @@
 @import '../../globals/scss/vendor/@carbon/elements/scss/import-once/import-once';
 @import '../../globals/scss/vars';
 
-@include exports('data-table-v2-skeleton') {
+@include exports('data-table-skeleton') {
   .#{$prefix}--data-table.#{$prefix}--skeleton {
     th {
       vertical-align: middle;
-
-      &:nth-child(3n + 1) {
-        width: 10%;
-      }
-
-      &:nth-child(3n + 2) {
-        width: 30%;
-      }
-
-      &:nth-child(3n + 3) {
-        width: 15%;
-      }
     }
 
     th span,
     td span {
       @include skeleton;
-      width: 75%;
-      height: 1rem;
+      width: rem(64px);
+      height: rem(16px);
       display: block;
     }
 
@@ -48,7 +36,30 @@
     }
   }
 
-  .#{$prefix}--data-table-v2.#{$prefix}--skeleton .#{$prefix}--table-sort-v2 {
+  .#{$prefix}--data-table.#{$prefix}--skeleton .#{$prefix}--table-sort-v2 {
     pointer-events: none;
+  }
+
+  .#{$prefix}--data-table.#{$prefix}--skeleton th span {
+    background: $skeleton-02;
+  }
+
+  .#{$prefix}--data-table.#{$prefix}--skeleton th span::before {
+    background: $skeleton-01;
+  }
+
+  .#{$prefix}--data-table-container.#{$prefix}--skeleton
+    .#{$prefix}--data-table-header__title {
+    @include skeleton;
+    width: rem(120px);
+    height: rem(24px);
+  }
+
+  .#{$prefix}--data-table-container.#{$prefix}--skeleton
+    .#{$prefix}--data-table-header__description {
+    @include skeleton;
+    margin-top: $spacing-03;
+    width: rem(160px);
+    height: rem(16px);
   }
 }
