fix(tooltip): import layout helpers (#5786)

--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -7,6 +7,8 @@
 
 @import 'helper-mixins';
 @import 'css--helpers';
+@import 'layout';
+@import 'typography';
 
 // Tooltip
 // Tooltip caret visual styles
