fix(modal): ensure modal renders correctly on mobile safari (#5776)
* fix(modal): ensure modal renders correctly on mobile safari

* fix(modal): set position fixed for all mobile devices

* Update packages/components/src/components/modal/_modal.scss

Co-Authored-By: emyarod <emyarod@users.noreply.github.com>

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -67,7 +67,8 @@
   }
 
   .#{$prefix}--modal-container {
-    position: relative;
+    position: fixed;
+    top: 0;
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: auto;
@@ -84,6 +85,7 @@
     transition: transform $duration--moderate-02 motion(exit, expressive);
 
     @include carbon--breakpoint(md) {
+      position: static;
       width: 84%;
       max-height: 90%;
       height: auto;
