feat(grid): update breakpoint-down with correct max width (#5791)
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/layout/scss/_breakpoint.scss
+++ b/packages/layout/scss/_breakpoint.scss
@@ -163,8 +163,13 @@ $carbon--grid-breakpoints: (
       @content;
     }
   } @else if map-has-key($breakpoints, $name) {
+    // We borrow this logic from bootstrap for specifying the value of the
+    // max-width. The maximum width is calculated by finding the breakpoint and
+    // subtracting .02 from its value. This value is used instead of .01 to
+    // avoid rounding issues in Safari
+    // https://github.com/twbs/bootstrap/blob/c5b1919deaf5393fcca9e9b9d7ce9c338160d99d/scss/mixins/_breakpoints.scss#L34-L46
     $breakpoint: map-get($breakpoints, $name);
-    $width: map-get($breakpoint, width);
+    $width: map-get($breakpoint, width) - 0.02;
     @media (max-width: $width) {
       @content;
     }
