feat(tile): only show chevron on selection (#5667)
* feat(tile): only show chevron on selection

* fix(tile): update selected state to use $ui-05

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -57,7 +57,10 @@
     &:hover {
       background: $hover-ui;
     }
+  }
 
+  .#{$prefix}--tile--clickable,
+  .#{$prefix}--tile--expandable {
     &:hover,
     &:focus {
       .#{$prefix}--tile__checkmark {
@@ -176,7 +179,7 @@
   }
 
   .#{$prefix}--tile--is-selected {
-    outline: 1px solid $interactive-02;
+    outline: 1px solid $ui-05;
     outline-offset: -1px;
   }
 
