fix(components): reintroduce layer mixin (#5812)
* fix(components): reintroduce layer mixin

* Update _layer.scss

* Update _layer.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/globals/scss/styles.scss
+++ b/packages/components/src/globals/scss/styles.scss
@@ -67,6 +67,7 @@ $css--use-experimental-grid-fallback: false !default;
 @import 'theme';
 @import 'mixins';
 @import 'layout';
+@import 'layer';
 @import 'spacing';
 @import 'typography';
 @import './vendor/@carbon/elements/scss/import-once/import-once';
