feat(text-input): adds fluid variation of text input (#5830)
* feat(text-inputs): adds fluid variation of text input

* feat(text-input): add fluid to props

* feat(form): adds fluid prop to form component

* chore(text-input): move fluid handling to form

* feat(FluidForm): add fluid form component

* feat(text-input): add fluid error state

* chore(text-input): update invalid state css

* feat(fluid-input): add context to fluid form

* chore(fluid-form): remove button from storybook and margin from fluid

* chore(text-input): css fixes

* chore(text-input): make divider conditional

* chore(text-input): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Anna Gonzales <anna.gonzales3@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/form/_form.scss
+++ b/packages/components/src/components/form/_form.scss
@@ -83,6 +83,26 @@
     }
   }
 
+  //Fluid Form
+  .#{$prefix}--form--fluid
+    .#{$prefix}--text-input__field-wrapper[data-invalid] {
+    display: block;
+  }
+
+  .#{$prefix}--form--fluid .#{$prefix}--fieldset {
+    margin: 0;
+  }
+
+  .#{$prefix}--form--fluid input[data-invalid] {
+    outline: none;
+  }
+
+  .#{$prefix}--form--fluid .#{$prefix}--form-requirement {
+    margin: 0;
+    padding: $carbon--spacing-03 rem(40px) $carbon--spacing-03
+      $carbon--spacing-05;
+  }
+
   // Fix for red ring when input is marked required in Firefox, refs #744
   input:not(output):not([data-invalid]):-moz-ui-invalid {
     box-shadow: none;
