feat(react): upgrade downshift dependency to v5 (#5373)
* fix(Dropdown): rely on list-box height closes #4916

* feat(react): update Downshift to v2.2.3

* feat(react): update Downshift to v3.4.8

* feat(react): update Downshift to v4.1.0

* feat(react): upgrade downshift to v5

* fix(react): add prop adapter for downshift depreacations from v1 to v5

* fix(react): add propAdapter for downshift v3 breaking changes

* fix(react): add propAdapter for downshift v3 breaking changes

* test(react): add propadapter test

* fix(react): update createPropAdapter comment to be better

* fix(combobox): add getMenuProps override

* fix(list-box): change psuedo selector to match Downshift changes

* fix(dropdown): get menu items speaking in NVDA again

* fix(dropdown): fix dap violations

* fix(dropdown): remove refkey

* fix(dropdown): remove refkey/unused aria

* fix(dropdown): remove refkey for real

* fix(dropdown): various changes of varying importance

* fix(listbox): update downshift usage for dropdown

* fix(react): removed weird dir I accidentally added

* fix(dropdown): add inputprops id

* fix(dropdown): add useState implementation

* fix(dropdown): convert to useSelect

* fix(dropdown): convert to useSelect hook w/ListBox

* fix(dropdown): add button reset

* fix(dropdown): style dropdown button

* fix(dropdown): un-nest button selector

* fix(combobox/dropdown): nits/style/bug tweaks

* fix(dropdown): add translateWithId and initialSelectedItem props

* fix(dropdown): add back css reset

* fix(dropdown): update tests

* fix(combobox): remove incorrectly set innerref

* fix(combobox): remove incorrectly set innerref

* fix(combobox): update tests and remove unneeded aria

* fix(combobox): add combobox test helpers and fix broke tests

* fix(multiselect): update tests

* test(listbox): update test helpers and snapshots

* test(listbox): update test helpers and snapshots

* fix(tests): update s

--- a/packages/components/src/components/combo-box/_combo-box.scss
+++ b/packages/components/src/components/combo-box/_combo-box.scss
@@ -26,6 +26,10 @@
     &[disabled]::placeholder {
       color: $disabled-02;
     }
+
+    &::-ms-clear {
+      display: none;
+    }
   }
 
   .#{$prefix}--combo-box.#{$prefix}--list-box--expanded
