feat(unstable-pagination): add refactored experimental pagination component (#5485)
* feat(unstable_pagination): initial commit of js, scss, and story demo

* fix(unstable-pagination): update naming structure

* fix(unstable-pagination): add styles for refactored component

* fix(unstable-pagination): update imports

* fix(unstable-pagination): flatten styles

* fix(unstable-pagination): update class names

* fix(unstable-pagination): update comments and formatting

* chore: run prettier

* chore: update exports snapshot

* feat(unstable-pagination): remove page-input subcomponent

* fix(pagination): remove page-input styles

* fix: remove page input from api snapshot

* fix(unstable-pagination): update left and right section height

* test(api): update public api snapshot to include new components

* fix(unstable-pagination): adjust btn focus outlines

* fix(unstable-pagination): update select hover state, update borders

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/react/.storybook/styles.scss
+++ b/packages/react/.storybook/styles.scss
@@ -61,6 +61,7 @@ $prefix: 'bx';
 @import '~carbon-components/src/components/tabs/tabs';
 @import '~carbon-components/src/components/tag/tag';
 @import '~carbon-components/src/components/pagination/pagination';
+@import '~carbon-components/src/components/pagination/unstable_pagination';
 @import '~carbon-components/src/components/accordion/accordion';
 @import '~carbon-components/src/components/progress-indicator/progress-indicator';
 @import '~carbon-components/src/components/breadcrumb/breadcrumb';
